      chdir before loading modules.
    - Added libs and switches handling to T::H::Compatible. This and the
      previous change fix [24926]
    - Added PERLLIB to libraries stripped in _default_inc [12030]
    - Our version of prove now handles directories containing circular
      links correctly [21938]
    - Set TAP_VERSION env var in Parser [11595]
      
0.51 12 March 2007
    - 'execrc' file now allows 'regex' matches for tests.
    - rename 'TAPx' --> 'TAP'
    - Reimplemented the parse logic of TAP::Parser as a state machine.
    - Removed various ad-hoc state variables from TAP::Parser and moved
      their logic into the state machine.
    - Removed now-unused is_first / is_last methods from Iterator and
      simplified remaining logic to suit.
    - Removed now-redundant t/140-varsource.t.
    - Implemented TAP version syntax.
    - Tidied TAP::Harness::Compatible documentation
    - Removed redundant modules below TAP::Harness::Compatible
    - Removed unused compatibility tests

0.50_07 5 March 2007
    - Fixed bug where we erroneously checked the test number instead of number
      of tests run to determine if we've run more tests than we planned.
    - Add a --directives switch to 'runtests' which only shows test results
      with directives (such as 'TODO' or 'SKIP').
    - Removed some dead code from TAPx::Parser.
    - Added color support for Windows using Win32::Console.
    - Made Color::failure_output reset colors before printing
      the trailing newline.
    - Corrected some issues with the 'runtests' docs and removed some
      performance notes which no longer seem accurate.
    - Fixed bug whereby if tests without file extensions were included then
      the spacing of the result leaders would be off.
    - execrc file is now a YAML file.
    - Removed white background on the test failures.  It was too garish for
      me.  Just more proof that we need better ways of overriding color
      support.