@@ -92,6 +92,42 @@ sub switches {
     return $self;
 }
 
+##############################################################################
+
+=head3 C<get_stream>
+
+ my $stream = $source->get_stream;
+
+Returns a stream of the output generated by executing C<source>.
+
+=cut
+
+sub get_stream {
+    my ($self) = @_;
+    my @command = $self->_get_command
+      or $self->_croak("No command found!");
+
+    my $setup = sub {
+        my @command = @_;
+
+        #warn "setup for ", join(' ', @command), "\n";
+    };
+
+    my $teardown = sub {
+        my @command = @_;
+
+        #warn "teardown for ", join(' ', @command), "\n";
+    };
+
+    return TAP::Parser::Iterator->new(
+        {   command  => \@command,
+            merge    => $self->merge,
+            setup    => $setup,
+            teardown => $teardown,
+        }
+    );
+}
+
 sub _get_command {
     my $self     = shift;
     my $file     = $self->source;
@@ -179,7 +215,7 @@ sub _filtered_inc {
         return @inc if @inc;
         my $proto = shift;
         local $ENV{PERL5LIB};
-        local $ENV{PERLLIB}; # [12030] fix untested
+        local $ENV{PERLLIB};    # [12030] fix untested
         my $perl = $proto->_get_perl;
         chomp( @inc = `$perl -le "print join qq[\\n], \@INC"` );
         return @inc;
