@@ -3,7 +3,7 @@
 use strict;
 
 #use Test::More 'no_plan';
-use Test::More tests => 52;
+use Test::More tests => 54;
 use File::Spec;
 use TAP::Parser;
 
@@ -20,21 +20,42 @@ my $offset = tell DATA;
 my $tap = do { local $/; <DATA> };
 seek DATA, $offset, 0;
 
+my $did_setup    = 0;
+my $did_teardown = 0;
+
+my $setup    = sub { $did_setup++ };
+my $teardown = sub { $did_teardown++ };
+
 my @schedule = (
-    'TAP::Parser::Iterator::Array',
-    array_ref_from($tap),
-    'TAP::Parser::Iterator::Stream',
-    \*DATA,
-    'TAP::Parser::Iterator::Process',
-    { command => [ $^X, '-e', 'print qq/one\ntwo\n\nthree\n/' ] },
-    'TAP::Parser::Iterator::Process',
-    {   command =>
-          [ $^X, File::Spec->catfile( 't', 'sample-tests', 'out_err_mix' ) ],
-        merge => 1
+    {   subclass => 'TAP::Parser::Iterator::Array',
+        source   => array_ref_from($tap),
+    },
+    {   subclass => 'TAP::Parser::Iterator::Stream',
+        source   => \*DATA,
+    },
+    {   subclass => 'TAP::Parser::Iterator::Process',
+        source =>
+          { command => [ $^X, '-e', 'print qq/one\ntwo\n\nthree\n/' ] },
+    },
+    {   subclass => 'TAP::Parser::Iterator::Process',
+        source   => {
+            command => [
+                $^X, File::Spec->catfile( 't', 'sample-tests', 'out_err_mix' )
+            ],
+            merge    => 1,
+            setup    => $setup,
+            teardown => $teardown,
+        },
+        after => sub {
+            is $did_setup,    1, "setup called";
+            is $did_teardown, 1, "teardown called";
+          }
     },
 );
 
-while ( my ( $subclass, $source ) = splice @schedule, 0, 2 ) {
+for my $test (@schedule) {
+    my $subclass = $test->{subclass};
+    my $source   = $test->{source};
     ok my $iter = TAP::Parser::Iterator->new($source),
       'We should be able to create a new iterator';
     isa_ok $iter, 'TAP::Parser::Iterator', '... and the object it returns';
@@ -58,6 +79,10 @@ while ( my ( $subclass, $source ) = splice @schedule, 0, 2 ) {
     is $iter->exit, 0, "... and exit should now return 0 ($subclass)";
 
     is $iter->wait, 0, "wait should also now return 0 ($subclass)";
+
+    if ( my $after = $test->{after} ) {
+        $after->();
+    }
 }
 
 __DATA__
